--- a/src/components/main/components/header-new/header-new.less
+++ b/src/components/main/components/header-new/header-new.less
@@ -2,6 +2,7 @@
   width: 100%;
   height: 100%;
   position: relative;
+  background:#001529;
   .custom-content-con{
     float: right;
     height: auto;
