--- a/src/components/main/main.less
+++ b/src/components/main/main.less
@@ -30,6 +30,7 @@
   .content-wrapper{
     height: ~"calc(100% - 80px)";
     overflow: auto;
+    padding:10px;
   }
   .left-sider{
     .ivu-layout-sider-children{
